--- a/client/app/src/components/layout/_layout.scss
+++ b/client/app/src/components/layout/_layout.scss
@@ -86,6 +86,7 @@
             font-weight: bold;
         }
         .submenu{
+            background-color: #fff;
             span{
                 font-size: 17px;
                 font-weight: bold;
@@ -123,6 +124,19 @@
     font-size: 25px;
     line-height: 80px;
     margin-top: auto;
+}
+
+.login{
+    width: 100%;
+    height: auto;
+    margin-top: 10vh;
+    form{
+        width: 100%;
+    }
+    p{
+        display: block;
+        float: right;
+    }
 }
 
 @media screen and (max-width: 1024px) {
